--- a/src/css/blocks/article.scss
+++ b/src/css/blocks/article.scss
@@ -68,7 +68,6 @@
     }
 
     &__link {
-        background-color: var(--lightPrimaryColor);
         padding: 0 2px;
 
         &:hover {
